# Qt-TcpServer

./: README.md
Qt-TcpServer/: CMakeLists.txt  main.cpp  main.qml  tcpserver.cpp  tcpserver.h
